# ai-business-orchestra

./: .env  .env.example  .gitignore  ACKNOWLEDGMENTS.md  CLAUDE.md  LICENSE  README.md  README_HARUPLATE.md  business_orchestra_main.py  demo_full.py  haruplate_orchestra.py  haruplate_orchestra_main.py  orchestra.py  orchestra_enhanced.py  pyproject.toml  requirements-clean.txt  requirements-haruplate.txt  requirements.txt  test_haruplate_complete.py  test_orchestra.py
.claude/: settings.local.json
config/: admin_agents.yaml  admin_tasks.yaml  agents.yaml  haruplate_admin_agents.yaml  haruplate_admin_tasks.yaml  haruplate_agents.yaml  haruplate_hr_agents.yaml  haruplate_hr_tasks.yaml  haruplate_tasks.yaml  hr_agents.yaml  hr_tasks.yaml  tasks.yaml
src/: __init__.py
src/agents/: __init__.py  admin_agent.py  conductor_agent.py  hr_agent.py
src/crews/: __init__.py  admin_crew.py  haruplate_admin_crew.py  haruplate_hr_crew.py  hr_crew.py
src/flows/: __init__.py  business_orchestra_flow.py  business_orchestra_flow_simple.py  business_orchestra_flow_v2.py  haruplate_orchestra_flow.py  haruplate_orchestra_flow_simple.py  haruplate_orchestra_flow_v2.py  human_approval_flow.py  orchestra_conductor.py
src/tasks/: __init__.py  hr_tasks.py
src/tools/: __init__.py  business_tools.py  data_analysis_tools.py  document_tools.py  financial_tools.py  haruplate_tools.py  integration_tools.py  meeting_tools.py  real_api_integrations.py  recruitment_tools.py
